--- a/web/test.html
+++ b/web/test.html
@@ -42,7 +42,7 @@
   <pre id="resultado">Esperando acción...</pre>
 
   <script>
-    const servidor = "https://tuservidorpublico.com"; // Cambia esta URL a tu dominio real
+    const servidor = "https://obliged-sole-practice1-0909c43c.koyeb.app"; // Cambia esta URL a tu dominio real
     const clienteId = "cliente_web_001";
     let peticionId = null;
     let intervalo = null;
